@@ -3,10 +3,11 @@ Hash: SHA256
 
 DIST libnotify-0.5.7.gem 29184 RMD160 1cfdf1591f549a74dd707a4bf1b68786df051183 SHA1 dd6488a421897ed04b6189e16b6468c86f2f1b36 SHA256 0645899aab628b9e16e924708c21aa65e84c2550e5a17c2643d0f8a19fb337a5
 DIST libnotify-0.7.1.gem 29184 RMD160 a64180d7e8d54bdd573e5776d747d5724764ca28 SHA1 03d0a5bc89dd86ac58edda541991af8a49a82c3a SHA256 f8d0690f1b4b190fdd0550148907ed7235e92dafa50616e855e8372a29f18159
+DIST libnotify-0.7.2.gem 29184 RMD160 7e32d0d83a748429073a90cd0c90c0134a7f6bd1 SHA1 8aaf28959db849cf54dce0b22d9227a27f2f31cb SHA256 abcc13c180ad14360c47e25c3ee2c0b43d0b5140d927c5a1e9255eae5bc92a8e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk8J0P0ACgkQiIP6VqMIqNdGhAD/bWit0wMsYJGORFiKl1RiaHWs
-D3i9ttU8FmP2Pi2qJZwA/0jJIz0FPvrofwF0rsxMDTCzPpv9QCh2YUo3o7QbAG+L
-=Cw9e
+iF4EAREIAAYFAk+ICO4ACgkQiIP6VqMIqNd/OQD8Cze3V1vQ+N1wKy/mI4n3zZcS
+Fov/hGKqhsYTgCGOrJsA/0FLM97TFZ+5gt/yirAdLBjb2R7jZsyhoG0cL49OCkw3
+=a38j
 -----END PGP SIGNATURE-----
